@@ -2,6 +2,7 @@
 
 == 0.9.8 (unreleased)
 
+* Fixed error_messages_for with custom locales
 * Added "padrino gen", "padrino g" as alias of padrino-gen.
 * Prevent that an account destroy itself
 * Removed some unused code from padrino-admin
